<resources>
    <string name="app_name">Medical Care</string>
    <string name="logo_de_la_aplicacion">Logo de la aplicación</string>
    <string name="tienda_virtual">Tienda Virtual</string>
    <string name="bienvenido">Bienvenido@</string>
    <string name="inicio">Inicio</string>
    <string name="productos">Ver Productos</string>
    <string name="categorias">Ver Categorías</string>
    <string name="carrito">Ver Carrito</string>
    <string name="perfil">Ver Perfil</string>

    <string name="open_drawer">Menú abierto</string>
    <string name="close_drawer">Menú cerrado</string>
    <string name="descripcion_tienda">En Medical Care tienes al alcance de tu mano todos los productos que requieres para teer una buena salud.</string>
    <string name="bienvenido_tienda">Bienvenid@ a la tienda virtual :)</string>
    <string name="boton_anadir">Añadir al carrito</string>
    <string name="imagen_del_producto">Imagen del producto</string>
    <string name="nombre_producto">Nombre producto</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="btnAnadir">Añadir</string>
    <string name="lista_de_productos">Lista de productos</string>
    <string name="lista_de_categor_as">Lista de Categorías</string>
    <string name="ver_productos">Ver Productos</string>
    <string name="productos_en_el_carrito">Productos en el carrito</string>

    <string name="autor_name">Wilson Steven Nuñez Labrador</string>
    <string name="register_button">Regístrate</string>
    <string name="intro_text">
        Inicia una nueva aventura con Medical Care y descubre una nueva forma de ver el mundo
    </string>
    <string name="start_button">Comienza</string>
    <string name="welcome_text_login">
        La aventura está por iniciar, por favor inicia sesión
    </string>
    <string name="login_button">Ingresar</string>
    <string name="forgot_password">Recupera Tu Contraseña</string>
    <string name="register_info">¿No tienes una cuenta?</string>
    <string name="google_button">Ingresa con Google</string>
    <string name="register_description">Completa el formulario para crear tu cuenta</string>

    <string name="txtSend">Enviar</string>

    <!-- activity register -->
    <string name="hintName">Nombres completos</string>
    <string name="hintLastname">Apellidos completos</string>
    <string name="hintEmail">Correo electrónico</string>
    <string name="hintPhone">Teléfono</string>
    <string name="hintPassword">Contraseña</string>
    <string name="hintRepeatPassword">Repite tu contraseña</string>
    <string name="hintTyC">Acepto términos y condiciones</string>

    <!-- Activity recovery password -->
    <string name="forgot_password_title">
        ¿Olvidaste tu contraseña?
    </string>
    <string name="forgot_password_txt">
         No te preocupes, ingresa tu correo electrónico y te enviaremos un
        enlace para restablecerla. Sigue las instrucciones en tu correo para crear una nueva
        contraseña y recuperar el acceso a tu cuenta.
    </string>
    <string name="backButton">Regresar</string>

    <!-- Activity user profile -->
    <string name="userProfileDescription">Aquí podrás consultar y editar tus datos personales</string>
    <string name="userProfileEditButton">Guardar datos</string>
    <string name="userProfileImageDescription">Imagen de perfil</string>
    <string name="full_name_format">%1$s %2$s</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="btn_central_activity">Actividad Central</string>

    <!-- Activity central -->
    <string name="centralDescription">Complete los campos para calcular el impacto ambiental de sus actividades diarias</string>
    <string name="consumoEnergiaTxt">Consumo de energía eléctrica (kWh)</string>
    <string name="consumoAguaTxt">Consumo de agua (litros)</string>
    <string name="generaResiduosTxt">Generación de residuos (kg)</string>
    <string name="habitosReciclajeTxt">Hábitos de reciclaje (porcentaje)</string>
    <string name="btnMedicion">Medir impacto</string>
    <string name="datos_del_usuario">Datos del usuario</string>
    <string name="editar_datos">Editar Datos</string>


</resources>