<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!-- Imagen de perfil -->
    <ImageView
        android:id="@+id/imgFotoPerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/userProfileImageDescription"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        />

    <!-- Nombre de la App -->
    <TextView
        android:id="@+id/txtNombreApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos_del_usuario"
        android:textColor="@color/purpura"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

    <!-- Descripción -->
    <TextView
        android:id="@+id/txtDescripcionPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userProfileDescription"
        android:textColor="@color/celeste"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginTop="8dp" />


    <!-- Campos modo solo lectura -->
    <TextView
        android:id="@+id/txtNombrePerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negro"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtApellidoPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negro"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtCorreoPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negro"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtTelefonoPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/negro"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:visibility="visible" />


    <!-- Campos de edición ocultos inicialmente -->
    <EditText
        android:id="@+id/edtNombresPerfil"
        style="@style/EditTextRounded"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/negro"
        android:hint="@string/hintName"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/edtApellidosPerfil"
        style="@style/EditTextRounded"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/negro"
        android:hint="@string/hintLastname"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/edtCorreoPerfil"
        style="@style/EditTextRounded"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/negro"
        android:hint="@string/hintEmail"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/edtTelefonoPerfil"
        style="@style/EditTextRounded"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="phone"
        android:textColor="@color/negro"
        android:hint="@string/hintPhone"
        android:layout_marginTop="30dp" />

    <!-- Botón Editar Perfil -->
    <Button
        android:id="@+id/btnGuardarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar_datos"
        android:textColor="@color/blanco"
        android:backgroundTint="@color/celeste"
        android:layout_marginTop="16dp" />

    <!-- Botón Cerrar sesión -->
    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:textColor="@color/blanco"
        android:backgroundTint="@color/purpura"
        android:layout_marginTop="8dp" />
</LinearLayout>
