<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordRecoveryActivity"
    android:background="@color/purpura">

    <ImageView
        android:id="@+id/ivLogoRegister"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="236dp"
        android:layout_height="46dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/btnSendRecovery"
        android:layout_width="313dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/celeste"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/txtSend"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/blanco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.636"
        app:strokeColor="@color/marino"
        app:strokeWidth="2.5dp" />

    <Button
        android:id="@+id/btnBackLogin"
        android:layout_width="313dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/blanco"
        android:fontFamily="@font/abhaya_libre"
        android:text="@string/backButton"
        android:textAlignment="center"
        android:textColor="@color/celeste"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.735"
        app:strokeColor="@color/marino"
        app:strokeWidth="2.5dp" />

    <TextView
        android:id="@+id/tvForgotPasswordDescription"
        android:layout_width="357dp"
        android:layout_height="96dp"
        android:text="@string/forgot_password_txt"
        android:textAlignment="viewStart"
        android:textColor="@color/blanco"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <TextView
        android:id="@+id/tvForgotPasswordTitle"
        android:layout_width="357dp"
        android:layout_height="31dp"
        android:text="@string/forgot_password_title"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <EditText
        android:id="@+id/editTextRecoveryEmail"
        style="@style/EditTextRounded"
        android:layout_width="348dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/hintEmail"
        android:textColor="@color/negro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

</androidx.constraintlayout.widget.ConstraintLayout>