<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="@color/blanco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageProduct"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="12dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/imagen_del_producto" />

        <TextView
            android:id="@+id/titleProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_producto"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/negro"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/descriptionProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripci_n_del_producto"
            android:textSize="14sp"
            android:textColor="@color/negro"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/valueProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/negro"
                android:layout_marginEnd="24dp" />

            <TextView
                android:id="@+id/cantidadProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="14sp"
                android:textColor="@color/negro" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAnadir"
            android:backgroundTint="@color/celeste"
            android:textColor="@color/blanco" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
