<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purpura"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etUser_login"
        style="@style/EditTextRounded"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/negro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364" />

    <EditText
        android:id="@+id/etPassword_login"
        style="@style/EditTextRounded"
        android:layout_width="307dp"
        android:layout_height="48dp"
        android:hint="@string/hintPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/negro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="106dp"
        android:layout_height="109dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:fontFamily="@font/amiko"
        android:text="@string/app_name"
        android:textColor="@color/blanco"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <TextView
        android:id="@+id/tvAppWelcome"
        android:layout_width="377dp"
        android:layout_height="61dp"
        android:fontFamily="@font/amiko"
        android:text="@string/welcome_text_login"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232" />

    <ImageView
        android:id="@+id/ivUserIcon"
        android:layout_width="40dp"
        android:layout_height="51dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        app:srcCompat="@drawable/icon_user" />

    <ImageView
        android:id="@+id/ivPasswordIcon"
        android:layout_width="38dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475"
        app:srcCompat="@drawable/icon_password" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="264dp"
        android:layout_height="66dp"
        android:backgroundTint="@color/celeste"
        android:text="@string/login_button"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624"
        app:strokeColor="@color/marino"
        app:strokeWidth="2.5dp" />

    <Button
        android:id="@+id/tvForgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/forgot_password"
        android:textColor="@color/blanco"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_text_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822">

        <!-- Icono de Google -->
        <ImageView
            android:id="@+id/imgGoogleIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/google_button"
            android:src="@drawable/icon_google" />

        <!-- Botón de inicio de sesión con Google -->
        <Button
            android:id="@+id/btnGoogleLogin"
            android:layout_width="266dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="9dp"
            android:layout_toEndOf="@id/imgGoogleIcon"
            android:background="@android:color/transparent"
            android:fontFamily="@font/abhaya_libre"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/google_button"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="27sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvRegisterInfo"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:text="@string/register_info"
        android:textColor="@color/blanco"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896" />

    <Button
        android:id="@+id/tvRegisterButton"
        android:layout_width="109dp"
        android:layout_height="34dp"
        android:background="@android:color/transparent"
        android:paddingHorizontal="3dp"
        android:paddingVertical="0dp"
        android:text="@string/register_button"
        android:textColor="@color/celeste"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892" />

</androidx.constraintlayout.widget.ConstraintLayout>